--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../public/style.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../public/style.css" />
+    <script src="./university.js" defer></script>
+    <title>UniFi</title>
+  </head>
 
-  <script src="./university.js" defer></script>
-  <title>UniFi</title>
-</head>
-
-<body>
-  <div class="nav">
-    <div class="nav__user">
-      <a class="nav__btn"><strong>Create Account</strong></a>
-      <a class="nav__btn" href="Account Creation/login-page-index.html"><strong>Login</strong></a>
-    </div>
-    <div class="head">
-      <div class="head__container">
-        <button class="head__btn"><strong>UniFi</strong></button>
+  <body>
+    <header class="nav">
+      <div class="nav__user">
+        <a class="nav__user__link" href="#">Create Account</a>
+        <a class="nav__user__link" href="Account Creation/login-page-index.html"
+          >Login</a
+        >
       </div>
-      <a class="head__btn">School Search</a>
-      <a class="head__btn">Resource</a>
-      <a class="head__btn">Services</a>
+      <nav class="navbar">
+        <button class="navbar__btn">UniFi</button>
+        <a class="navbar__link" href="#">School Search</a>
+        <a class="navbar__link" href="#">Resource</a>
+        <a class="navbar__link" href="#">Services</a>
+      </nav>
+    </header>
+
+    <h1 class="sub-title">Find the Right University For YOU</h1>
+
+    <div class="container">
+      <div class="container__filter container__filter--sticky">
+        <input type="text" placeholder="Type something" />
+
+        <datalist id="course-list">
+          <option>Computer Science</option>
+          <option>Information Technology</option>
+          <option>Computer Engineer</option>
+        </datalist>
+
+        <datalist id="degree-list">
+          <option>Bachelor Degree</option>
+          <option>Masters</option>
+          <option>Secondary</option>
+          <option>Summer</option>
+        </datalist>
+
+        <input type="search" placeholder="Course" list="course-list" />
+        <input type="search" placeholder="Degree" list="degree-list" />
+
+        <button class="container__btn">Search</button>
+      </div>
+
+      <!-- Universities -->
+      <div class="uni"></div>
     </div>
-  </div>
-
-  <h1 class="sub-title">Find the Right University For YOU</h1>
-
-  <div class="container">
-    <div class="container__filter container__filter--sticky">
-      <input type="text" placeholder="Type something">
-
-      <datalist id="course-list">
-        <option>Computer Science</option>
-        <option>Information Technology</option>
-        <option>Computer Engineer</option>
-      </datalist>
-
-      <datalist id="degree-list">
-        <option>Bachelor Degree</option>
-        <option>Masters</option>
-        <option>Secondary</option>
-        <option>Summer</option>
-      </datalist>
-
-      <input type="search" placeholder="Course" list="course-list">
-      <input type="search" placeholder="Degree" list="degree-list">
-
-      <button class="container__btn">Search</button>
-    </div>
-
-    <!-- Universities -->
-    <div class="uni"></div>
-
-  </div>
-</body>
-
+  </body>
 </html>
