--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -20,12 +20,12 @@
       <form action="#">
         <div class="input-box">
           <span class="icon"><ion-icon name="mail"></ion-icon></span>
-          <input type="email" required>
+          <input type="email" name="email" required>
           <label>Email</label>
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-          <input type="password" required>
+          <input type="password" name="password" required>
           <label>Password</label>
         </div>
         <div class="remember-forgot">
@@ -47,17 +47,17 @@
       <form action="#">
         <div class="input-box">
           <span class="icon"><ion-icon name="person"></ion-icon></ion-icon></span>
-          <input type="text" required>
+          <input type="text" name="username" required>
           <label>Username</label>
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="mail"></ion-icon></span>
-          <input type="email" required>
+          <input type="email" name="email" required>
           <label>Email</label>
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-          <input type="password" required>
+          <input type="password" name="password" required>
           <label>Password</label>
         </div>
         <div class="remember-forgot">
