--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,15 @@
       <a class="nav__user__link" href="./Login/login.html">Account</a>
     </div>
     <nav class="navbar">
-      <button class="navbar__btn">UniFi</button>
-      <a class="navbar__link" href="#">School Search</a>
-      <a class="navbar__link" href="#">Resource</a>
-      <a class="navbar__link" href="#">Services</a>
+      <!-- <button class="navbar__btn">UniFi</button> -->
+      <div class="logo">
+        <img class="unifi" src="../images/UniFi.png" alt="">
+      </div>
+      <div class="navbar__links">
+        <a class="navbar__link" href="#">Search</a>
+        <a class="navbar__link" href="#">Resource</a>
+        <a class="navbar__link" href="#">Services</a>
+      </div>
     </nav>
   </header>
 
@@ -52,6 +57,20 @@
     <!-- Universities -->
     <div class="uni"></div>
   </div>
+
+  <footer>
+    <div class="top">
+      <img class="unifi" src="../images/UniFi.png" alt="">
+      <div class="footer__links">
+        <a class="footer__link" href="#">Search</a>
+        <a class="footer__link" href="#">Resource</a>
+        <a class="footer__link" href="#">Services</a>
+      </div>
+    </div>
+    <div class="copyright">
+      <h3>UniFi @ 2023</h3>
+    </div>
+  </footer>
 </body>
 
 </html>
