--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="nav">
     <div class="nav__user">
-      <a class="nav__user__link" href="./Login/login.html">Account</a>
+      <a class="nav__user__link" href="./Login/login.html">Profile</a>
     </div>
     <nav class="navbar">
       <!-- <button class="navbar__btn">UniFi</button> -->
